Archive2/5b/ebbd9aaccfb57c/output
main.cpp:5:9: error: redefinition of 'i'
    int i;                      //
        ^
main.cpp:3:9: note: previous definition is here
    int i;                      // (3) Code introduced by compiler in place of `using namespace C;`below
        ^
main.cpp:11:9: error: redefinition of 'i'
    int i;
        ^
main.cpp:3:9: note: previous definition is here
    int i;                      // (3) Code introduced by compiler in place of `using namespace C;`below
        ^
main.cpp:31:5: error: use of undeclared identifier 'i'; did you mean 'A::i'?
    i = 5;
    ^
    A::i
main.cpp:3:9: note: 'A::i' declared here
    int i;                      // (3) Code introduced by compiler in place of `using namespace C;`below
        ^
3 errors generated.
